# neilsolaramc

./: .env.local.example  .gitignore  ASCII:GitHubBranchFlow.txt  ASCII_CloudBuild_CloudRunarchitecture.txt  CONTRIBUTING.md  Dockerfile  LICENSE  cloudbuild.yaml  docker-compose.yml  git_merge.puml  git_plus_cloudbuild_plus_cloudrun.puml
backend/: .env.phase1b.template  Dockerfile  Dockerfile.notification-engine  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_and_rls.py  0002_add_logo_paths.py  0003_add_audit_log.py  0004_add_checklist_template_tables.py  0005_add_notification_engine_tables.py  0005_phase1c_approval_hardening.py  0006_add_notification_delivery_jobs.py  0006_add_report_jobs.py  0007_add_correlation_ids.py  0007_add_site_supervisor_email.py  0008_add_notification_history_and_retention.py  0008_report_jobs_simulated_failures.py  0009_phase1d_generation.py  0010_phase1e_geo_validation.py
backend/app/: main.py
backend/app/core/: config.py  correlation.py  logging.py  secrets.py  security.py  tenancy.py
backend/app/db/: session.py
backend/tests/: conftest.py  test_admin_api.py  test_email_adapter_routing.py  test_mailgun_adapter.py  test_notification_engine_skeleton.py  test_notification_events.py  test_notification_maintenance.py  test_notification_runtime.py  test_phase1a_validations.py  test_phase1b_services.py  test_phase1c_approval_resilience.py  test_phase1c_report_jobs.py  test_phase1d_generation_rules.py  test_phase1e_geo_validation.py  test_report_generation.py  test_secret_resolver.py
(+139 files in other folders)
